--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 /backend/.phpunit.result.cache
 /backend/phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> vue/vuetify/typescript ###
+/frontend/node_modules/
+/frontend/npm-debug.log
+###< vue/vuetify/typescript ###
