--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "vue": "^3.4.21",
-    "vuetify": "^3.5.7"
+    "vuetify": "^3.11.0-beta.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
@@ -20,7 +21,7 @@
     "eslint-plugin-vue": "^9.24.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.8",
-    "vue-tsc": "^2.0.11",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "vue-tsc": "^2.0.11"
   }
 }
