--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.24.1",
+    "flush-promises": "^1.0.2",
+    "jsdom": "^27.3.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.8",
     "vitest": "^1.4.0",
