--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,18 +27,18 @@ jobs:
       - name: Build Docker containers
         run: docker compose -f docker-compose.yml up -d --build
         
-      - name: Wait for services to be healthy
+      # - name: Wait for services to be healthy
         # Attendre que la base de données soit prête avant d'exécuter les migrations/tests
-        run: |
-          echo "Waiting for DB to start..."
+        # run: |
+          # echo "Waiting for DB to start..."
           # Remplacez 'db' par le nom de votre service DB dans docker-compose.yml (ex: database)
-          SERVICE_NAME="db_name" 
-          while ! docker compose ps --services --filter "name=${SERVICE_NAME}" --filter "status=running" | grep -q ${SERVICE_NAME}; do
-            echo "Waiting for ${SERVICE_NAME}..."
-            sleep 3
-          done
-          echo "${SERVICE_NAME} is running. Waiting 5 more seconds for port readiness..."
-          sleep 5 # Temps additionnel pour que PostgreSQL démarre vraiment
+          # SERVICE_NAME="db_name" 
+          # while ! docker compose ps --services --filter "name=${SERVICE_NAME}" --filter "status=running" | grep -q ${SERVICE_NAME}; do
+            # echo "Waiting for ${SERVICE_NAME}..."
+            # sleep 3
+          # done
+          # echo "${SERVICE_NAME} is running. Waiting 5 more seconds for port readiness..."
+          # sleep 5 # Temps additionnel pour que PostgreSQL démarre vraiment
           
       - name: Install Composer dependencies
         # Exécuter les commandes Composer/Symfony DANS le conteneur PHP
