ADD entities station, routeSegment and fixtures from json (+ add commands in ci/cd)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,9 +64,12 @@ jobs:
         # Exécuter les commandes Composer/Symfony DANS le conteneur PHP
         run: docker compose exec -T --user root backend composer install --prefer-dist
         
-      # - name: Run Database Migrations
-      #   run: docker compose exec -T backend bin/console doctrine:migrations:migrate -n
-        
+      - name: Run Database Migrations
+        run: docker compose exec -T --user root backend bin/console doctrine:migrations:migrate -n
+      
+      - name: Load Data Fixtures
+        run: docker compose exec -T --user root backend bin/console doctrine:fixtures:load -n
+
       - name: Run Backend Unit Tests (PHPUnit)
         # Exécute les tests unitaires du backend
         run: docker compose exec -T --user root backend vendor/bin/phpunit
