ADD route with repo to get all data + add line vite config for port 5173

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,6 @@
 ###> vue/vuetify/typescript ###
 /frontend/node_modules/
 /frontend/npm-debug.log
+/frontend/dist/
+/frontend/tsconfig.tsbuildinfo
 ###< vue/vuetify/typescript ###
